--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,12 @@
 			<version>1.18.26</version>
 			<scope>compile</scope>
 		</dependency>
+		<!-- jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
