--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,18 @@
 			<artifactId>spring-integration-stomp</artifactId>
 			<version>5.3.2.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.6.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.6.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
